--- a/FA1_Yan/home.html
+++ b/FA1_Yan/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE.html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Formative Assessment 1</title>
@@ -13,7 +13,7 @@
 			<a href="files/page2.html">
 			<img src="images/roc.jpg" alt="Rex Orange County" height=100px width=100px></a>
 			<a href="files/page3.html">
-			<img src="images/danc.jpg" alt="Daniel Czesar" height=100px width=100px></a>
+			<img src="images/danc.jpg" alt="Daniel Caesar" height=100px width=100px></a>
 			<p>Click any of these icons to know more about my favourite music artists!</p>
 		</hr>
 	</body>
