--- a/AA1/index.html
+++ b/AA1/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE>
 <html>
 	<head>
-		<title>Formative Assessment 1</title>
+		<title>Alternative Assessment 1</title>
 		<meta charset="UTF-8">
 		<meta name="author" content="My Name">
+		<style>
+			body h2{
+				line-height: 0.4;
+			}
+		</style>
 	</head>
 	<body>
 		<h2>COMPUTER SCIENCE 3</h2>
