--- a/FA5_Yan/FA5_Yan.html
+++ b/FA5_Yan/FA5_Yan.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<title> Formative Assessment 5 </title>
+		<title> Yan, Patrick </title>
 	</head>
 	<body>
 		<header>
@@ -20,5 +20,6 @@ the Lighthouse Cruise.<p>
 		<article>
 		<footer>
 			<p>Copyright &copy; PAYan</p>
+		</footer>
 	</body>
 </html>
