--- a/FA5_Yan/FA5_Yan.html
+++ b/FA5_Yan/FA5_Yan.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<title> Yan, Patrick </title>
+		<title> Yan, Patrick Quinn R. </title>
 	</head>
 	<body>
 		<header>
@@ -12,9 +12,7 @@
 			<h2>the best coffee on the coast</h2>
 		</header>
 		<article>
-			<p>Experience the
-melodramatic sipping of the coast’s best coffee, while dancing in the waves with
-the Lighthouse Cruise.<p>
+			<p>Experience the melodramatic sipping of the coast’s best coffee, while dancing in the waves with the Lighthouse Cruise.<p>
 			<video width=75% controls>
 			<source src= "https://jeunilongo.github.io/CS3/Module6/lighthouse.mp4" type="video/mpeg">
 		<article>
