--- a/FA5_Yan/FA5_Yan.html
+++ b/FA5_Yan/FA5_Yan.html
@@ -12,12 +12,13 @@
 			<h2>the best coffee on the coast</h2>
 		</header>
 		<article>
-			<p>Experience the melodramatic sipping of the coast’s best coffee, while dancing in the waves with the Lighthouse Cruise.<p>
+			<p>Experience the melodramatic sipping of the coast’s best coffee, 
+			   while dancing in the waves with the Lighthouse Cruise.<p>
 			<video width=75% controls>
-			<source src= "https://jeunilongo.github.io/CS3/Module6/lighthouse.mp4" type="video/mpeg">
-		<article>
+			<source src= "https://jeunilongo.github.io/CS3/Module6/lighthouse.mp4" type="video/ogg">
+		</article>
 		<footer>
-			<p>Copyright &copy; PAYan</p>
+			Copyright &copy; PAYan
 		</footer>
 	</body>
 </html>
