--- a/AA2_Yan/AA2_Yan.html
+++ b/AA2_Yan/AA2_Yan.html
@@ -38,7 +38,7 @@
 					background-size: 840px 420px;
 					width: 100px;
 					height: 100px;
-					color: transparent;
+					font-size: 0;
 				} 
 			
 			#blue {
@@ -62,7 +62,7 @@
 					background-size: 840px 420px;
 					width: 100px;
 					height: 100px;
-					color: transparent;
+					font-size: 0;
 				} 
 		</style>
 	</head>
