--- a/AA2_Yan/AA2_Yan.html
+++ b/AA2_Yan/AA2_Yan.html
@@ -38,8 +38,10 @@
 					background-size: 840px 420px;
 					width: 100px;
 					height: 100px;
-					font-size: 0;
-				} 
+				}
+				#red:active p{
+					display: none;
+				}
 			
 			#blue {
 				position: relative;
@@ -62,8 +64,10 @@
 					background-size: 840px 420px;
 					width: 100px;
 					height: 100px;
-					font-size: 0;
 				} 
+				#blue:active p{
+					display: none;
+				}
 		</style>
 	</head>
 	<body>
