--- a/Q4_FA14_Yan.html
+++ b/Q4_FA14_Yan.html
@@ -171,7 +171,10 @@
 
 				output.style.display = 'block';
 			});
-
+			
+			form.addEventListener('reset', () => {
+				output.style.display = 'none';
+			});
 		</script>
 	</body>
 </html>
