--- a/Q4_SA_GoYanCartagena.html
+++ b/Q4_SA_GoYanCartagena.html
@@ -101,13 +101,13 @@
 			<div class="question">
 				 1.) The secretary was praised for her <span>dexterity.</span>
 					</br>
-				  <input type="radio" name="q1" value="cooperation">
+				  <input type="radio" name="q1" required value="cooperation">
 					<label for="cooperation">A. Cooperation</label><br>
-				  <input type="radio" name="q1" value="efficiency">
+				  <input type="radio" name="q1" required value="efficiency">
 					<label for="efficiency">B. Efficiency</label><br>
-				  <input type="radio" name="q1" value="personality">
+				  <input type="radio" name="q1" required value="personality">
 					<label for="personality">C. Personality</label><br>
-				  <input type="radio" name="q1" value="skill">
+				  <input type="radio" name="q1" required value="skill">
 					<label for="skill">D. Skill</label>
 					<p id="u1"></p>
 			</div>
@@ -115,13 +115,13 @@
 			<div class="question">
 				2.) Her computer is <span>obsolete.</span>
 					</br>
-				  <input type="radio" name="q2" value="complicated">
+				  <input type="radio" name="q2" required value="complicated">
 					<label for="complicated">A. Complicated</label><br>
-				  <input type="radio" name="q2" value="outdated">
+				  <input type="radio" name="q2" required value="outdated">
 					<label for="outdated">B. Outdated</label><br>
-				  <input type="radio" name="q2" value="reliable">
+				  <input type="radio" name="q2" required value="reliable">
 					<label for="reliable">C. Reliable</label><br>
-				  <input type="radio" name="q2" value="useless">
+				  <input type="radio" name="q2" required value="useless">
 					<label for="useless">D. Useless</label>
 					<p id="u2"></p>
 			</div>
@@ -129,13 +129,13 @@
 			<div class="question">
 				3.) The irrigation system <span> depleted </span> the water supply.
 					</br>
-				  <input type="radio" name="q3" value="exhausted">
+				  <input type="radio" name="q3" required value="exhausted">
 					<label for="exhausted">A. Exhausted</label><br>
-				  <input type="radio" name="q3" value="included">
+				  <input type="radio" name="q3" required value="included">
 					<label for="included">B. Included</label><br>
-				  <input type="radio" name="q3" value="muddled">
+				  <input type="radio" name="q3" required value="muddled">
 					<label for="muddled">C. Muddled</label><br>
-				  <input type="radio" name="q3" value="rejected">
+				  <input type="radio" name="q3" required value="rejected">
 					<label for="rejected">D. Rejected</label>
 					<p id="u3"></p>
 			</div>
@@ -143,13 +143,13 @@
 			<div class="question">
 				4.) Parents must <span> instill </span> proper values in their children.
 					</br>
-				  <input type="radio" name="q4" value="forcefully teach">
+				  <input type="radio" name="q4" required value="forcefully teach">
 					<label for="forcefully">A. Forcefully teach</label><br>
-				  <input type="radio" name="q4" value="effectively restore">
+				  <input type="radio" name="q4" required value="effectively restore">
 					<label for="effectively">B. Effectively restore</label><br>
-				  <input type="radio" name="q4" value="gradually impart">
+				  <input type="radio" name="q4" required value="gradually impart">
 					<label for="gradually">C. Gradually impart</label><br>
-				  <input type="radio" name="q4" value="measure exactly">
+				  <input type="radio" name="q4" required value="measure exactly">
 					<label for="measure">D. Measure exactly</label>
 					<p id="u4"></p>
 			</div>
@@ -157,13 +157,13 @@
 			<div class="question">
 				5.) He managed minimally his eating habits, sleeping patterns and working schedules.  Now, he is in <span> precarious </span> health.
 					</br>
-				  <input type="radio" name="q5" value="fit">
+				  <input type="radio" name="q5" required value="fit">
 					<label for="fit">A. Fit</label><br>
-				  <input type="radio" name="q5" value="good">
+				  <input type="radio" name="q5" required value="good">
 					<label for="good">B. Good</label><br>
-				  <input type="radio" name="q5" value="healthy">
+				  <input type="radio" name="q5" required value="healthy">
 					<label for="healthy">C. Healthy</label><br>
-				  <input type="radio" name="q5" value="dangerous">
+				  <input type="radio" name="q5" required value="dangerous">
 					<label for="dangerous">D. Dangerous</label>
 					<p id="u5"></p>
 			</div>
@@ -171,13 +171,13 @@
 			<div class="question">
 				6.) The cat ______ dead on the pavement.
 					<br>
-				  <input type="radio" name="q6" value="lie">
+				  <input type="radio" name="q6" required value="lie">
 					<label for="lie">A. Lie</label><br>
-				  <input type="radio" name="q6" value="lied">
+				  <input type="radio" name="q6" required value="lied">
 					<label for="lied">B. Lied</label><br>
-				  <input type="radio" name="q6" value="layed">
+				  <input type="radio" name="q6" required value="layed">
 					<label for="layed">C. Layed</label><br>
-				  <input type="radio" name="q6" value="lay">
+				  <input type="radio" name="q6" required value="lay">
 					<label for="lay">D. Lay</label>
 					<p id="u6"></p>
 			</div>
@@ -185,13 +185,13 @@
 			<div class="question">
 				7.) You have to pay your bills now; ______, you will be fined if you pay after the due date.
 					<br>
-				  <input type="radio" name="q7" value="moreover">
+				  <input type="radio" name="q7" required value="moreover">
 					<label for="moreover">A. Moreover</label><br>
-				  <input type="radio" name="q7" value="however">
+				  <input type="radio" name="q7" required value="however">
 					<label for="however">B. However</label><br>
-				  <input type="radio" name="q7" value="otherwise">
+				  <input type="radio" name="q7" required value="otherwise">
 					<label for="otherwise">C. Otherwise</label><br>
-				  <input type="radio" name="q7" value="likewise">
+				  <input type="radio" name="q7" required value="likewise">
 					<label for="likewise">D. Likewise</label>
 					<p id="u7"></p>
 			</div>
@@ -199,13 +199,13 @@
 			<div class="question">
 				8.) He is ______ from taking the final examinations.
 					<br>
-				  <input type="radio" name="q8" value="accepted">
+				  <input type="radio" name="q8" required value="accepted">
 					<label for="accepted">A. Accepted</label><br>
-				  <input type="radio" name="q8" value="excepted">
+				  <input type="radio" name="q8" required value="excepted">
 					<label for="excepted">B. Excepted</label><br>
-				  <input type="radio" name="q8" value="exempted">
+				  <input type="radio" name="q8" required value="exempted">
 					<label for="exempted">C. Exempted</label><br>
-				  <input type="radio" name="q8" value="intercepted">
+				  <input type="radio" name="q8" required value="intercepted">
 					<label for="intercepted">D. Intercepted</label>
 					<p id="u8"></p>
 			</div>
@@ -213,13 +213,13 @@
 			<div class="question">
 				9.) My opinion is ______ yours.
 					<br>
-				  <input type="radio" name="q9" value="different for">
+				  <input type="radio" name="q9" required value="different for">
 					<label for="for">A. Different for</label><br>
-				  <input type="radio" name="q9" value="different from">
+				  <input type="radio" name="q9" required value="different from">
 					<label for="from">B. Different from</label><br>
-				  <input type="radio" name="q9" value="different than">
+				  <input type="radio" name="q9" required value="different than">
 					<label for="than">C. Different than</label><br>
-				  <input type="radio" name="q9" value="different in">
+				  <input type="radio" name="q9" required value="different in">
 					<label for="in">D. Different in</label>
 					<p id="u9"></p>
 			</div>
@@ -227,13 +227,13 @@
 			<div class="question">
 				10.) We are all ______ to see the baby.
 					<br>
-				  <input type="radio" name="q10" value="anxious">
+				  <input type="radio" name="q10" required value="anxious">
 					<label for="anxious">A. Anxious</label><br>
-				  <input type="radio" name="q10" value="sad">
+				  <input type="radio" name="q10" required value="sad">
 					<label for="sad">B. Sad</label><br>
-				  <input type="radio" name="q10" value="eager">
+				  <input type="radio" name="q10" required value="eager">
 					<label for="eager">C. Eager</label><br>
-				  <input type="radio" name="q10" value="downcast">
+				  <input type="radio" name="q10" required value="downcast">
 					<label for="downcast">D. Downcast</label>
 					<p id="u10"></p>
 			</div>
@@ -241,13 +241,13 @@
 			<div class="question">
 				11.) Had I studied very well, I ___ rewarded with a vacation in the US
 					<br>
-				  <input type="radio" name="q11" value="was">
+				  <input type="radio" name="q11" required value="was">
 					<label for="was">A. Was</label><br>
-				  <input type="radio" name="q11" value="would have been">
+				  <input type="radio" name="q11" required value="would have been">
 					<label for="been">B. Would have been</label><br>
-				  <input type="radio" name="q11" value="will be">
+				  <input type="radio" name="q11" required value="will be">
 					<label for="will">C. Will be</label><br>
-				  <input type="radio" name="q11" value="would be">
+				  <input type="radio" name="q11" required value="would be">
 					<label for="would">D. Would be</label>
 					<p id="u11"></p>
 			</div>
@@ -255,13 +255,13 @@
 			<div class="question">
 				12.) When helping in the kitchen, I am always careful not to hurt _____.
 					<br>
-				  <input type="radio" name="q12" value="ourselves">
+				  <input type="radio" name="q12" required value="ourselves">
 					<label for="ourselves">A. Ourselves</label><br>
-				  <input type="radio" name="q12" value="myself">
+				  <input type="radio" name="q12" required value="myself">
 					<label for="myself">B. Myself</label><br>
-				  <input type="radio" name="q12" value="himself">
+				  <input type="radio" name="q12" required value="himself">
 					<label for="himself">C. Himself</label><br>
-				  <input type="radio" name="q12" value="herself">
+				  <input type="radio" name="q12" required value="herself">
 					<label for="herself">D. Herself</label>
 					<p id="u12"></p>
 			</div>
@@ -269,13 +269,13 @@
 			<div class="question">
 				13.) _____ was the weather like when you were on holiday?
 					<br>
-				  <input type="radio" name="q13" value="where">
+				  <input type="radio" name="q13" required value="where">
 					<label for="where">A. Where</label><br>
-				  <input type="radio" name="q13" value="how">
+				  <input type="radio" name="q13" required value="how">
 					<label for="how">B. How</label><br>
-				  <input type="radio" name="q13" value="when">
+				  <input type="radio" name="q13" required value="when">
 					<label for="when">C. When</label><br>
-				  <input type="radio" name="q13" value="what">
+				  <input type="radio" name="q13" required value="what">
 					<label for="what">D. What</label>
 					<p id="u13"></p>
 			</div>
@@ -283,13 +283,13 @@
 			<div class="question">
 				14.) ____ any further information, do not hesitate to contact me
 					<br>
-				  <input type="radio" name="q14" value="unless you need">
+				  <input type="radio" name="q14" required value="unless you need">
 					<label for="unless">A. Unless you need</label><br>
-				  <input type="radio" name="q14" value="you will need">
+				  <input type="radio" name="q14" required value="you will need">
 					<label for="will">B. You will need</label><br>
-				  <input type="radio" name="q14" value="you should need">
+				  <input type="radio" name="q14" required value="you should need">
 					<label for="youShould">C. You should need</label><br>
-				  <input type="radio" name="q14" value="should you need">
+				  <input type="radio" name="q14" required value="should you need">
 					<label for="shouldYou">D. Should you need</label>
 					<p id="u14"></p>
 			</div>
@@ -297,40 +297,40 @@
 			<div class="question">
 				15.) It's not so much his looks I don't like ___ his inability to listen
 					<br>
-				  <input type="radio" name="q15" value="than">
+				  <input type="radio" name="q15" required value="than">
 					<label for="than">A. Than</label><br>
-				  <input type="radio" name="q15" value="for">
+				  <input type="radio" name="q15" required value="for">
 					<label for="for">B. For</label><br>
-				  <input type="radio" name="q15" value="more">
+				  <input type="radio" name="q15" required value="more">
 					<label for="more">C. More</label><br>
-				  <input type="radio" name="q15" value="as">
+				  <input type="radio" name="q15" required value="as">
 					<label for="As">D. As</label>
 					<p id="u15"></p>	
 			</div>
 
 			<h3>Inctructions: Input the word that would be appropriate to the corresponding analogy. Please input your answer in all lowercase.</h3>
 			<div class="question">
-				16.) Hot : cold :: fire : <input type="text" name="answer1">
+				16.) Hot : cold :: fire : <input type="text" required name="answer1">
 				<p id="u16"></p>
 			</div>
 				<br>
 			<div class="question">
-				17.) Book : read :: pen : <input type="text" name="answer2">
+				17.) Book : read :: pen : <input type="text" required name="answer2">
 				<p id="u17"></p>
 			</div>
 				<br>
 			<div class="question">
-				18.) Doctor : hospital :: teacher : <input type="text" name="answer3">
+				18.) Doctor : hospital :: teacher : <input type="text" required name="answer3">
 				<p id="u18"></p>
 			</div>
 				<br>
 			<div class="question">
-				19.) Square : cube :: circle : <input type="text" name="answer4">
+				19.) Square : cube :: circle : <input type="text" required name="answer4">
 				<p id="u19"></p>
 			</div>
 				<br>
 			<div class="question">
-				20.) Brother : sister :: nephew : <input type="text" name="answer5">
+				20.) Brother : sister :: nephew : <input type="text" required name="answer5">
 				<p id="u20"></p>
 			</div>
 			<br>
@@ -338,11 +338,10 @@
 			
 			<div class="center">
 				<button type="submit">Submit Test</button>
-				<button type="reset">Reset Test</button>
+				<button type="reset" onclick="res()">Reset Test</button>
 			</div>
 		</form>
 		<script>
-			const form = document.querySelector('form');
 			function uTest() {
 			  uScore = 0;
 			  if(eTest.q1.value == "skill") {
@@ -510,9 +509,29 @@
 			  return false;
 			}
 			
-			form.addEventListener('reset', () => {
-				output.style.display = 'none';
-			});
+			function res(){
+				u20.innerHTML = "";
+				u19.innerHTML = "";
+				u18.innerHTML = "";
+				u17.innerHTML = "";
+				u16.innerHTML = "";
+				u15.innerHTML = "";
+				u14.innerHTML = "";
+				u13.innerHTML = "";
+				u12.innerHTML = "";
+				u11.innerHTML = "";
+				u10.innerHTML = "";
+				u9.innerHTML = "";
+				u8.innerHTML = "";
+				u7.innerHTML = "";
+				u6.innerHTML = "";
+				u5.innerHTML = "";
+				u4.innerHTML = "";
+				u3.innerHTML = "";
+				u2.innerHTML = "";
+				u1.innerHTML = "";
+				score.innerHTML = "";
+			}
 		</script>
 	</body>
 </html>
